Fix menu misalignment.

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -115,8 +115,8 @@ body {
     margin: 0 15px;
 }
 
-#main-menu {
-    @media (max-width: @screen-xs) {
-        width: 100%;
-    }
+.navbar-toggle {
+    padding: 9px 10px 3px;
 }
+
+
